Using Explanation API to calculate shap values
Migrating to the new “Explanation” API. https://shap.readthedocs.io/en/latest/example_notebooks/api_examples/migrating-to-new-api.html

--- a/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
+++ b/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
@@ -16,18 +16,7 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.9.6' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "This script performs model inference for the Student Success Tool (SST) pipeline.\n",
@@ -58,13 +47,17 @@
     "from pyspark.sql.types import FloatType, StringType, StructField, StructType\n",
     "from databricks.sdk import WorkspaceClient\n",
     "from email.headerregistry import Address\n",
+    "import shap\n",
+    "import matplotlib.colors as mcolors\n",
     "\n",
     "# Import project-specific modules\n",
     "import student_success_tool.dataio as dataio\n",
     "from student_success_tool.modeling import inference\n",
     "import student_success_tool.modeling as modeling\n",
     "from student_success_tool.schemas import pdp as schemas\n",
-    "from student_success_tool import emails\n",
+    "from pipelines.tasks.utils import emails\n",
+    "from student_success_tool.pipeline_utils.plot import plot_shap_beeswarm\n",
+    "\n",
     "\n",
     "# Disable mlflow autologging (prevents conflicts in Databricks environments)\n",
     "mlflow.autolog(disable=True)\n",
@@ -160,7 +153,6 @@
     "    else:\n",
     "        return pred_probs\n",
     "\n",
-    "\n",
     "# --- Main Inference Logic ---\n",
     "if spark_session:\n",
     "    # --- Data Loading ---\n",
@@ -225,9 +217,6 @@
     "\n",
     "    # --- SHAP Values Calculation ---\n",
     "    pred_probs = df_predicted_dataset[\"predicted_prob\"]\n",
-    "\n",
-    "    # TODO: Consider saving the explainer during training\n",
-    "    # TODO: Pedro's note: Consider getting shap_ref_data_size from a workflow parameter or from the toml config file\n",
     "    shap_ref_data_size = 200\n",
     "    train_mode = df_train.mode().iloc\n",
     "    df_ref = (\n",
@@ -250,63 +239,24 @@
     "        link=\"identity\",\n",
     "    )\n",
     "\n",
-    "    shap_schema = StructType(\n",
-    "        [StructField(cfg.student_id_col, StringType(), nullable=False)]\n",
-    "        + [StructField(col, FloatType(), nullable=False) for col in model_feature_names]\n",
-    "    )\n",
-    "\n",
-    "    df_shap_values = (\n",
-    "        spark_session.createDataFrame(\n",
-    "            df_processed_dataset.reindex(\n",
-    "                columns=model_feature_names + [cfg.student_id_col]\n",
-    "            )\n",
-    "        )\n",
-    "        .repartition(spark_session.sparkContext.defaultParallelism)\n",
-    "        .mapInPandas(\n",
-    "            ft.partial(\n",
-    "                inference.calculate_shap_values_spark_udf,\n",
-    "                student_id_col=cfg.student_id_col,\n",
-    "                model_features=model_feature_names,\n",
-    "                explainer=explainer,\n",
-    "                mode=train_mode,\n",
-    "            ),\n",
-    "            schema=shap_schema,\n",
-    "        )\n",
-    "        .toPandas()\n",
-    "        .set_index(cfg.student_id_col)\n",
-    "        .reindex(df_processed_dataset[cfg.student_id_col])\n",
-    "        .reset_index(drop=False)\n",
-    "    )\n",
+    "    # Calculate Shap values using the KernelExplainer\n",
+    "    df_shap_values = explainer(df_processed_dataset[model_feature_names])\n",
     "\n",
     "    # --- SHAP Summary Plot ---\n",
-    "    # NOTE: to change colors https://stackoverflow.com/questions/60153036/changing-the-gradient-color-of-shap-summary-plot-to-specific-2-or-3-rgb-grad\n",
-    "    shap.summary_plot(\n",
-    "        df_shap_values.loc[:, model_feature_names].to_numpy(),\n",
-    "        df_serving_dataset.loc[:, model_feature_names],\n",
-    "        class_names=loaded_model.classes_,\n",
-    "        max_display=20,\n",
-    "        show=False,\n",
-    "    )\n",
-    "    shap_fig = plt.gcf()\n",
-    "\n",
-    "    # # --- Log SHAP Plot to MLflow ---\n",
-    "    # with mlflow.start_run(run_id=model_run_id) as run:\n",
-    "    #     mlflow.log_figure(\n",
-    "    #         shap_fig,\n",
-    "    #         f\"shap_summary_dataset_name_dataset_\"\n",
-    "    #         f\"{df_ref.shape}_ref_rows.png\",\n",
-    "    #     )\n",
-    "\n",
+    "    # Plot Shap values using the beeswarm plot function\n",
+    "    shap_fig = plot_shap_beeswarm(df_shap_values)\n",
+    "    \n",
     "    # --- Feature Selection for Display ---\n",
     "    result = inference.select_top_features_for_display(\n",
     "        df_serving_dataset,\n",
     "        unique_ids,\n",
     "        pred_probs,\n",
-    "        df_shap_values[model_feature_names].to_numpy(),\n",
+    "        df_shap_values.values,\n",
     "        n_features=inference_params[\"num_top_features\"],\n",
     "        features_table=features_table,\n",
     "        needs_support_threshold_prob=inference_params[\"min_prob_pos_label\"],\n",
     "    )\n",
+    "\n",
     "    # Write the inference-ready dataset to Delta Lake.\n",
     "    shap_results_path = f\"{catalog}.{write_schema}.{sst_job_id}_shap_results_dataset\"\n",
     "    dataio.to_delta_table(result, shap_results_path, spark_session=spark_session)\n",
@@ -324,7 +274,7 @@
     "    ).save(result_path + \"inference_output\")\n",
     "\n",
     "    # Write the SHAP chart png to the volume\n",
-    "    shap_fig.savefig(result_path + \"shap_chart.png\")\n",
+    "    shap_fig.savefig(result_path + \"shap_chart.png\", bbox_inches = \"tight\")\n",
     "\n",
     "else:\n",
     "    logging.error(\"Spark session not initialized.\")"
@@ -370,16 +320,115 @@
     "pythonIndentUnit": 4
    },
    "notebookName": "pdp_model_inference",
-   "widgets": {}
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "widgets": {
+    "DB_workspace": {
+     "currentValue": "dev_sst_02",
+     "nuid": "cdc996d3-d00e-4715-97c6-e6ccef679222",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "uni_of_crystal_testing",
+      "label": "",
+      "name": "DB_workspace",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "uni_of_crystal_testing",
+      "label": "",
+      "name": "DB_workspace",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "databricks_institution_name": {
+     "currentValue": "uni_of_crystal_testing",
+     "nuid": "00e6f334-1d3c-4223-8c8e-6b7de87934ed",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": "",
+      "name": "databricks_institution_name",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": "",
+      "name": "databricks_institution_name",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "db_run_id": {
+     "currentValue": "928391757639049",
+     "nuid": "96df5599-835c-43c8-9cdb-03be203177d7",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "1234567",
+      "label": "",
+      "name": "db_run_id",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "1234567",
+      "label": "",
+      "name": "db_run_id",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "model_name": {
+     "currentValue": "latest_enrollment_model",
+     "nuid": "f8d7a328-8c46-4faf-940e-c00366eeabd8",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "latest_enrollment_model",
+      "label": "",
+      "name": "model_name",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "latest_enrollment_model",
+      "label": "",
+      "name": "model_name",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
-   "name": "python",
-   "version": "3.9.6"
+   "name": "python"
   }
  },
  "nbformat": 4,
