--- a/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
+++ b/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
@@ -37,18 +37,14 @@
     "\n",
     "import typing as t\n",
     "import functools as ft\n",
-    "import matplotlib.pyplot as plt\n",
     "import mlflow\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import shap\n",
     "from databricks.connect import DatabricksSession\n",
     "from databricks.sdk.runtime import dbutils  # noqa: F401\n",
-    "from pyspark.sql.types import FloatType, StringType, StructField, StructType\n",
     "from databricks.sdk import WorkspaceClient\n",
     "from email.headerregistry import Address\n",
-    "import shap\n",
-    "import matplotlib.colors as mcolors\n",
     "\n",
     "# Import project-specific modules\n",
     "import student_success_tool.dataio as dataio\n",
@@ -153,6 +149,7 @@
     "    else:\n",
     "        return pred_probs\n",
     "\n",
+    "\n",
     "# --- Main Inference Logic ---\n",
     "if spark_session:\n",
     "    # --- Data Loading ---\n",
@@ -245,7 +242,7 @@
     "    # --- SHAP Summary Plot ---\n",
     "    # Plot Shap values using the beeswarm plot function\n",
     "    shap_fig = plot_shap_beeswarm(df_shap_values)\n",
-    "    \n",
+    "\n",
     "    # --- Feature Selection for Display ---\n",
     "    result = inference.select_top_features_for_display(\n",
     "        df_serving_dataset,\n",
@@ -274,7 +271,7 @@
     "    ).save(result_path + \"inference_output\")\n",
     "\n",
     "    # Write the SHAP chart png to the volume\n",
-    "    shap_fig.savefig(result_path + \"shap_chart.png\", bbox_inches = \"tight\")\n",
+    "    shap_fig.savefig(result_path + \"shap_chart.png\", bbox_inches=\"tight\")\n",
     "\n",
     "else:\n",
     "    logging.error(\"Spark session not initialized.\")"
@@ -330,21 +327,21 @@
       "label": "",
       "name": "DB_workspace",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "uni_of_crystal_testing",
       "label": "",
       "name": "DB_workspace",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "databricks_institution_name": {
@@ -356,21 +353,21 @@
       "label": "",
       "name": "databricks_institution_name",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "databricks_institution_name",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "db_run_id": {
@@ -382,21 +379,21 @@
       "label": "",
       "name": "db_run_id",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "1234567",
       "label": "",
       "name": "db_run_id",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "model_name": {
@@ -408,21 +405,21 @@
       "label": "",
       "name": "model_name",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "latest_enrollment_model",
       "label": "",
       "name": "model_name",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
