--- a/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
+++ b/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
@@ -236,11 +236,11 @@
     "        link=\"identity\",\n",
     "    )\n",
     "\n",
-    "    # Calculate Shap values using the KernelExplainer\n",
+    "    # Calculate Shap values using the new Shap Explanation API\n",
     "    df_shap_values = explainer(df_processed_dataset[model_feature_names])\n",
     "\n",
     "    # --- SHAP Summary Plot ---\n",
-    "    # Plot Shap values using the beeswarm plot function\n",
+    "    # Plot Shap values using the beeswarm plot function \n",
     "    shap_fig = plot_shap_beeswarm(df_shap_values)\n",
     "\n",
     "    # --- Feature Selection for Display ---\n",
