Removed DBS widgets

--- a/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
+++ b/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
@@ -276,32 +276,6 @@
     "else:\n",
     "    logging.error(\"Spark session not initialized.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "5c7d9763-a2a7-45ba-98b7-9baa3776b9cf",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# TODO there are model dependencies that need to be installed at runtime\n",
-    "# This was the error receieved (although it still worked)\n",
-    "\"\"\"\n",
-    "- mlflow (current: 2.20.0, required: mlflow==2.19.0)\n",
-    "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n",
-    "\"\"\""
-   ]
   }
  ],
  "metadata": {
@@ -317,112 +291,7 @@
     "pythonIndentUnit": 4
    },
    "notebookName": "pdp_model_inference",
-   "widgets": {
-    "DB_workspace": {
-     "currentValue": "dev_sst_02",
-     "nuid": "cdc996d3-d00e-4715-97c6-e6ccef679222",
-     "typedWidgetInfo": {
-      "autoCreated": false,
-      "defaultValue": "uni_of_crystal_testing",
-      "label": "",
-      "name": "DB_workspace",
-      "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
-      },
-      "parameterDataType": "String"
-     },
-     "widgetInfo": {
-      "defaultValue": "uni_of_crystal_testing",
-      "label": "",
-      "name": "DB_workspace",
-      "options": {
-       "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
-     }
-    },
-    "databricks_institution_name": {
-     "currentValue": "uni_of_crystal_testing",
-     "nuid": "00e6f334-1d3c-4223-8c8e-6b7de87934ed",
-     "typedWidgetInfo": {
-      "autoCreated": false,
-      "defaultValue": "",
-      "label": "",
-      "name": "databricks_institution_name",
-      "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
-      },
-      "parameterDataType": "String"
-     },
-     "widgetInfo": {
-      "defaultValue": "",
-      "label": "",
-      "name": "databricks_institution_name",
-      "options": {
-       "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
-     }
-    },
-    "db_run_id": {
-     "currentValue": "928391757639049",
-     "nuid": "96df5599-835c-43c8-9cdb-03be203177d7",
-     "typedWidgetInfo": {
-      "autoCreated": false,
-      "defaultValue": "1234567",
-      "label": "",
-      "name": "db_run_id",
-      "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
-      },
-      "parameterDataType": "String"
-     },
-     "widgetInfo": {
-      "defaultValue": "1234567",
-      "label": "",
-      "name": "db_run_id",
-      "options": {
-       "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
-     }
-    },
-    "model_name": {
-     "currentValue": "latest_enrollment_model",
-     "nuid": "f8d7a328-8c46-4faf-940e-c00366eeabd8",
-     "typedWidgetInfo": {
-      "autoCreated": false,
-      "defaultValue": "latest_enrollment_model",
-      "label": "",
-      "name": "model_name",
-      "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
-      },
-      "parameterDataType": "String"
-     },
-     "widgetInfo": {
-      "defaultValue": "latest_enrollment_model",
-      "label": "",
-      "name": "model_name",
-      "options": {
-       "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
-     }
-    }
-   }
+   "widgets": {}
   },
   "language_info": {
    "name": "python"
