Adding .py version
Adding .py version of each of the tasks

--- a/pipelines/tasks/pdp_data_ingestion/pdp_data_ingestion.ipynb
+++ b/pipelines/tasks/pdp_data_ingestion/pdp_data_ingestion.ipynb
@@ -29,8 +29,8 @@
     "utilities for widget input, job task values, and Spark session management.\n",
     "\n",
     "This is a POC notebook, it is advised to refactor to .py and add tests before using in production.\n",
-    "\n",
     "\"\"\"\n",
+    "\n",
     "import logging\n",
     "import os\n",
     "\n",
@@ -42,6 +42,7 @@
     "from student_success_tool.schemas import pdp as schemas\n",
     "\n",
     "# Configure logging\n",
+    "\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "logging.getLogger(\"py4j\").setLevel(logging.WARNING)  # Ignore Databricks logger\n",
     "\n",
@@ -64,7 +65,7 @@
     "gcp_bucket_name = dbutils.widgets.get(\"gcp_bucket_name\")\n",
     "\n",
     "# Define paths (using Unity Catalog volumes)\n",
-    "internal_pipeline_path = f\"/Volumes/{DB_workspace}/{institution_name}_bronze/bronze_volume/inference_jobs/{db_run_id}/raw_files/\"\n",
+    "internal_pipeline_path = f\"/Volumes/{DB_workspace}/{institution_name}_gold/gold_volume/inference_jobs/{db_run_id}/raw_files/\"\n",
     "\n",
     "\n",
     "# Create internal pipeline directory\n",
@@ -94,11 +95,20 @@
     "fpath_cohort = os.path.join(path_volume, cohort_file_name)\n",
     "\n",
     "# Read data from CSV files into Pandas DataFrames and validate schema\n",
-    "df_course = dataio.pdp.read_raw_course_data(\n",
+    "try:\n",
+    "    df_course = dataio.pdp.read_raw_course_data(\n",
+    "        file_path=fpath_course,\n",
+    "        schema=schemas.RawPDPCourseDataSchema,\n",
+    "        dttm_format=\"ISO8601\",\n",
+    "    )\n",
+    "except ValueError:\n",
+    "    df_course = dataio.pdp.read_raw_course_data(\n",
     "    file_path=fpath_course,\n",
     "    schema=schemas.RawPDPCourseDataSchema,\n",
-    "    dttm_format=\"%Y-%m-%d\",\n",
+    "    dttm_format=\"%Y%m%d.0\",\n",
     ")\n",
+    "else:\n",
+    "    print(\"Incorrect date format used\")\n",
     "df_cohort = dataio.pdp.read_raw_cohort_data(\n",
     "    file_path=fpath_cohort, schema=schemas.RawPDPCohortDataSchema\n",
     ")\n",
