--- a/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
+++ b/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
@@ -31,7 +31,6 @@
     "This is a POC notebook, it is advised to refactor to .py and add tests before using in production.\n",
     "\"\"\"\n",
     "\n",
-    "# Import necessary libraries\n",
     "import logging\n",
     "import os\n",
     "\n",
@@ -54,6 +53,7 @@
     "from student_success_tool.schemas import pdp as schemas\n",
     "from pipelines.tasks.utils import emails\n",
     "from student_success_tool.pipeline_utils.plot import plot_shap_beeswarm\n",
+    "\n",
     "\n",
     "\n",
     "# Disable mlflow autologging (prevents conflicts in Databricks environments)\n",
@@ -105,7 +105,8 @@
     "# experiment_id = \"1510364684601785\"\n",
     "experiment_id = cfg.models[\"graduation\"].experiment_id\n",
     "model_run_id = cfg.models[\"graduation\"].run_id\n",
-    "model_uri = f\"models:/{catalog}.{model_schema}.{model_name}/1\"\n",
+    "# model_uri = f\"models:/{catalog}.{model_schema}.{model_name}/2\"\n",
+    "model_uri = f\"runs:/{model_run_id}/model\"\n",
     "\n",
     "\n",
     "# --- Load features table ---\n",
@@ -188,15 +189,9 @@
     "    # --- Prediction ---\n",
     "    df_predicted_dataset = df_serving_dataset.copy()\n",
     "    df_predicted_dataset[\"predicted_label\"] = loaded_model.predict(df_serving_dataset)\n",
-    "    try:\n",
-    "        df_predicted_dataset[\"predicted_prob\"] = loaded_model.predict_proba(\n",
-    "            df_serving_dataset\n",
-    "        )[:, 1]\n",
-    "    except AttributeError:\n",
-    "        logging.error(\n",
-    "            \"Model does not have predict_proba method. Skipping probability prediction.\"\n",
-    "        )\n",
-    "\n",
+    "    \n",
+    "    df_predicted_dataset[\"predicted_prob\"] = loaded_model.predict_proba(df_serving_dataset)[:, 1]\n",
+    "    \n",
     "    # --- Write Predicted Dataset ---\n",
     "    predicted_dataset_path = f\"{catalog}.{write_schema}.{sst_job_id}_predicted_dataset\"\n",
     "    dataio.to_delta_table(\n",
