building out template from latest from the model card

--- a/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
+++ b/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
@@ -97,7 +97,10 @@
    "outputs": [],
    "source": [
     "import mlflow\n",
+    "import logging \n",
     "from mlflow.tracking import MlflowClient\n",
+    "from databricks.connect import DatabricksSession\n",
+    "\n",
     "from student_success_tool import dataio, configs, modeling, reporting"
    ]
   },
@@ -210,7 +213,7 @@
     "model_name = modeling.registration.get_model_name(\n",
     "    institution_id=cfg.institution_id,\n",
     "    target=cfg.preprocessing.target,\n",
-    "    checkpoint=cfg.preprocessing.checkpoint,,\n",
+    "    checkpoint=cfg.preprocessing.checkpoint,\n",
     ")\n",
     "model_name"
    ]
@@ -234,7 +237,7 @@
     "modeling.registration.register_mlflow_model(\n",
     "    model_name,\n",
     "    cfg.institution_id,\n",
-    "    run_id=run_id,\n",
+    "    run_id=cfg.models[model_name].run_id,\n",
     "    catalog=catalog,\n",
     "    registry_uri=\"databricks-uc\",\n",
     "    mlflow_client=client,\n",
@@ -272,7 +275,26 @@
    },
    "outputs": [],
    "source": [
-    "card = reporting.model_card.ModelCard(config=cfg, catalog=catalog, model_name=model_name)\n",
+    "# Initialize card\n",
+    "card = reporting.model_card.ModelCard(config=cfg, catalog=catalog, model_name=model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8cfbcb65-6b41-4267-9260-07adc0873723",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Build context and download artifacts\n",
     "card.build()"
    ]
   },
@@ -289,9 +311,10 @@
     }
    },
    "source": [
-    "### Edit model card markdown file as you see fit before creating a PDF\n",
+    "### Edit model card markdown file as you see fit before exporting as a PDF\n",
     "- A markdown should now exist in your local directory. Feel free to edit in text editor before running the cell below.\n",
-    "- You don't need to refresh the browser, the model card function will re-read the markdown."
+    "- You don't need to refresh the browser or restart your cluster etc, the model card function will re-read the markdown below before exporting as a PDF\n",
+    "- You can access the PDF via ML artifacts in your registered model, as you will not be able to view the PDF locally in DB workspace."
    ]
   },
   {
@@ -309,8 +332,9 @@
    },
    "outputs": [],
    "source": [
-    "card.reload_edited_card()\n",
-    "card.export_to_pdf()  # creates model-card-*.pdf"
+    "# Reload & publish\n",
+    "card.reload_card()\n",
+    "card.export_to_pdf()"
    ]
   }
  ],
