creating pdp overrides for model card such that custom model cards can be built later

--- a/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
+++ b/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
@@ -101,7 +101,8 @@
     "from mlflow.tracking import MlflowClient\n",
     "from databricks.connect import DatabricksSession\n",
     "\n",
-    "from student_success_tool import dataio, configs, modeling, reporting"
+    "from student_success_tool import dataio, configs, modeling, reporting\n",
+    "from reporting.platforms.pdp import PDPModelCard"
    ]
   },
   {
@@ -276,7 +277,7 @@
    "outputs": [],
    "source": [
     "# Initialize card\n",
-    "card = reporting.model_card.ModelCard(config=cfg, catalog=catalog, model_name=model_name)"
+    "card = PDPModelCard(config=cfg, catalog=catalog, model_name=model_name)"
    ]
   },
   {
