cleaning up imports

--- a/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
+++ b/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
@@ -98,11 +98,10 @@
    "source": [
     "import mlflow\n",
     "import logging \n",
-    "from mlflow.tracking import MlflowClient\n",
     "from databricks.connect import DatabricksSession\n",
     "\n",
     "from student_success_tool import dataio, configs, modeling, reporting\n",
-    "from reporting.platforms.pdp import PDPModelCard"
+    "from student_success_tool.reporting.platforms.pdp import PDPModelCard"
    ]
   },
   {
