--- a/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
+++ b/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
@@ -100,7 +100,7 @@
     "import logging \n",
     "from databricks.connect import DatabricksSession\n",
     "\n",
-    "from student_success_tool import dataio, configs, modeling, reporting\n",
+    "from student_success_tool import dataio, configs, modeling\n",
     "from student_success_tool.reporting.platforms.pdp import PDPModelCard"
    ]
   },
