--- a/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
+++ b/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
@@ -96,8 +96,9 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import mlflow\n",
-    "import logging \n",
+    "import logging\n",
     "from databricks.connect import DatabricksSession\n",
     "\n",
     "from student_success_tool import dataio, configs, modeling\n",
@@ -132,8 +133,8 @@
     "catalog = \"sst_dev\"\n",
     "client = mlflow.tracking.MlflowClient()\n",
     "\n",
-    "# HACK: We need to disable the mlflow widget template loading for MC output \n",
-    "# Retrieved from DB office hours, otherwise 10+ DB widgets try to load and \n",
+    "# HACK: We need to disable the mlflow widget template loading for MC output\n",
+    "# Retrieved from DB office hours, otherwise 10+ DB widgets try to load and\n",
     "# fail when pulling from ML artifacts (it's annoying)\n",
     "os.environ[\"MLFLOW_ENABLE_ARTIFACTS_PROGRESS_BAR\"] = \"false\""
    ]
