update template post testing

--- a/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
+++ b/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
@@ -102,7 +102,7 @@
     "from databricks.connect import DatabricksSession\n",
     "\n",
     "from student_success_tool import dataio, configs, modeling\n",
-    "from student_success_tool.reporting.platforms.pdp import PDPModelCard"
+    "from student_success_tool.reporting.platforms.pdp.model_card import PDPModelCard"
    ]
   },
   {
@@ -175,7 +175,7 @@
     "# but as each step of the pipeline gets built, more parameters will be moved\n",
     "# from hard-coded notebook variables to shareable, persistent config fields\n",
     "cfg = dataio.read_config(\n",
-    "    \"./config-TEMPLATE.toml\", schema=configs.pdp.PDPProjectConfigV2\n",
+    "    \"./config-TEMPLATE.toml\", schema=configs.pdp.PDPProjectConfig\n",
     ")\n",
     "cfg"
    ]
@@ -213,8 +213,8 @@
    "source": [
     "model_name = modeling.registration.get_model_name(\n",
     "    institution_id=cfg.institution_id,\n",
-    "    target=cfg.preprocessing.target,\n",
-    "    checkpoint=cfg.preprocessing.checkpoint,\n",
+    "    target=cfg.preprocessing.target.name,\n",
+    "    checkpoint=cfg.preprocessing.checkpoint.name,\n",
     ")\n",
     "model_name"
    ]
