--- a/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
+++ b/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
@@ -174,9 +174,7 @@
     "# it'll start out with just basic info: institution_id, institution_name\n",
     "# but as each step of the pipeline gets built, more parameters will be moved\n",
     "# from hard-coded notebook variables to shareable, persistent config fields\n",
-    "cfg = dataio.read_config(\n",
-    "    \"./config-TEMPLATE.toml\", schema=configs.pdp.PDPProjectConfig\n",
-    ")\n",
+    "cfg = dataio.read_config(\"./config-TEMPLATE.toml\", schema=configs.pdp.PDPProjectConfig)\n",
     "cfg"
    ]
   },
