updating register mlflow run_id due to config change

--- a/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
+++ b/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
@@ -236,7 +236,7 @@
     "modeling.registration.register_mlflow_model(\n",
     "    model_name,\n",
     "    cfg.institution_id,\n",
-    "    run_id=cfg.models[model_name].run_id,\n",
+    "    run_id=cfg.model.run_id,\n",
     "    catalog=catalog,\n",
     "    registry_uri=\"databricks-uc\",\n",
     "    mlflow_client=client,\n",
