adding model card functions to reload and then export to pdf using weasyprint and markdown

--- a/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
+++ b/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
@@ -296,6 +296,45 @@
     "# Build context and download artifacts\n",
     "card.build()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "68ee5217-b9e1-4a3e-901e-ad63b5060436",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Edit model card markdown file as you see fit before exporting as a PDF\n",
+    "- A markdown should now exist in your local directory. Feel free to edit directly in DB's text editor before running the cell below.\n",
+    "- You don't need to refresh the browser or restart your cluster etc, the model card function will re-read the markdown below before exporting as a PDF\n",
+    "- You can access the PDF via ML artifacts in your registered model, as you will not be able to view the PDF locally in DB workspace.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9adab5f8-1061-4537-a29d-3d4d4144b01c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Reload & publish\n",
+    "card.reload_card()\n",
+    "card.export_to_pdf()"
+   ]
   }
  ],
  "metadata": {
