restructured package per feedback

--- a/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
+++ b/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
@@ -102,7 +102,7 @@
     "from databricks.connect import DatabricksSession\n",
     "\n",
     "from student_success_tool import dataio, configs, modeling\n",
-    "from student_success_tool.reporting.platforms.pdp.model_card import PDPModelCard"
+    "from student_success_tool.reporting.model_card.pdp import PDPModelCard"
    ]
   },
   {
