adding clarity around how notebooks should be pinned to versions. Remove command for someone to pin the notebook to a certain branch.

--- a/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
+++ b/pipelines/institution_id/04-register-model-create-card-TEMPLATE.ipynb
@@ -57,10 +57,14 @@
    },
    "outputs": [],
    "source": [
-    "# WARNING: AutoML/mlflow expect particular packages within certain version constraints\n",
-    "# overriding existing installs can result in errors and inability to load trained models\n",
-    "# %pip install \"student-success-tool==0.1.1\" --no-deps\n",
-    "# %pip install \"git+https://github.com/datakind/student-success-tool.git@develop\" --no-deps"
+    "# WARNING: AutoML/mlflow expect particular packages with version constraints\n",
+    "# that directly conflicts with dependencies in our SST repo. As a temporary fix,\n",
+    "# we need to manually install a certain version of pandas and scikit-learn in order \n",
+    "# for our models to load and run properly.\n",
+    "\n",
+    "# %pip install \"student-success-tool==0.2.0\"\n",
+    "# %pip install \"pandas==1.5.3\"\n",
+    "# %pip install \"scikit-learn==1.3.0\""
    ]
   },
   {
