ok trying to filter regex keys

--- a/tests/assets/Untitled Notebook 2025-06-30 17_05_53.ipynb
+++ b/tests/assets/Untitled Notebook 2025-06-30 17_05_53.ipynb
@@ -149,17 +149,22 @@
    "outputs": [],
    "source": [
     "import re\n",
+    "\n",
+    "def is_likely_regex(key: str) -> bool:\n",
+    "    # Matches if the key contains metacharacters indicating it's a regex\n",
+    "    return bool(re.search(r\"[\\(\\[\\.\\*\\+\\?\\\\]\", key))\n",
+    "\n",
     "# Only consider keys with \\d in them — implying dynamic regex patterns\n",
     "regex_keys = [\n",
     "    key for key in data.keys()\n",
-    "    if r\"\\d\" in key\n",
+    "    if is_likely_regex(key)\n",
     "]\n",
     "print(regex_keys)\n",
     "# Compile the regex patterns\n",
     "compiled_patterns = [re.compile(pattern) for pattern in regex_keys]\n",
     "\n",
     "# Check if the feature_name matches ANY of them\n",
-    "matched = any(pat.match(feature_name) for pat in compiled_patterns for feature_name in VALID_FEATURE_NAMES)\n",
+    "matched = any(pat.fullmatch(feature_name) for pat in compiled_patterns for feature_name in VALID_FEATURE_NAMES)\n",
     "\n",
     "assert matched, (\n",
     "    f\"Feature '{feature_name}' did not match any regex pattern with \\\\d in the TOML\"\n",
